--- a/www/style.css
+++ b/www/style.css
@@ -56,7 +56,12 @@
             margin-top: 5%;
             padding-left: 2%;
             padding-right: 2%;
+            text-transform: uppercase;
         } 
+
+        .development{
+            font-size: 2.5em;
+        }
 
         #team {
             color: black;
