fix column sizing

--- a/www/style.css
+++ b/www/style.css
@@ -258,6 +258,11 @@
             margin-top: 6%;
         }
 
+        .extra-padding {
+            padding-left: 4%;
+            padding-right: 4%;
+        }
+
 
 
     /* Common button styles */
